--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@testing-library/user-event": "^13.2.1",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.0",
+    "daisyui": "^3.9.4",
     "dotenv": "^16.3.1",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
+    "react-daisyui": "^4.1.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
