--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "swiper": "^11.0.3",
     "tailwindcss": "^3.3.5"
   },
   "scripts": {
