--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-daisyui": "^4.1.2",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "swiper": "^11.0.3",
